--- a/src/Blog.css
+++ b/src/Blog.css
@@ -1,6 +1,6 @@
 .main2{
     width:100%;
-    height:250px;
+    height:40vh;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -27,7 +27,7 @@
     flex-wrap: wrap;
 }
 .textbox{ 
-    width:50%;
+    width:60%;
     height:90%;
     background-color: rgb(83, 132, 126,0.5);
     font-weight: bold;
